--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,17 @@
 {
     "manifest_version": 3,
-    "name": "English Word Collector",
-    "version": "1.0",
-    "description": "Automatically saves copied English text to a local database.",
-    "permissions": [
-        "storage",
-        "scripting"
-    ],
-    "host_permissions": [
-        "<all_urls>"
-    ],
+    "name": "AnkiAIWordPicker",
+    "version": "0.1.0",
+    "description": "智能化得收集、整理（自动制作Anki卡片）并同步单词到云端",
+    "permissions": ["storage", "scripting"],
+    "host_permissions": ["<all_urls>"],
     "background": {
         "service_worker": "background.js"
     },
     "content_scripts": [
         {
-            "matches": [
-                "<all_urls>"
-            ],
-            "js": [
-                "content.js"
-            ]
+            "matches": ["<all_urls>"],
+            "js": ["content.js"]
         }
     ],
     "action": {
@@ -31,6 +22,7 @@
             "128": "icons/icon_128x128.png"
         }
     },
+    "options_page": "options.html",
     "icons": {
         "16": "icons/icon_16x16.png",
         "48": "icons/icon_48x48.png",
